--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>IP Logger</title>
+  <title>strawberryONTOP</title>
 </head>
 <body>
   <h1>Welcome!</h1>
